feat: bootstrap import/export de clientes e níveis